# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
CALL_MANAGER_PATH = "../../.."

ohos_unittest("tel_call_earthquake_alarm_test") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "tel_call_earthquake_alarm_test"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CALL_MANAGER_PATH}/frameworks/native/src/call_manager_service_proxy.cpp",
    "${CALL_MANAGER_PATH}/services/call_earthquake_alarm/src/call_earthquake_alarm_locator.cpp",
    "${CALL_MANAGER_PATH}/services/call_earthquake_alarm/src/call_earthquake_alarm_subscriber.cpp",
    "src/call_earthquake_alarm_test.cpp",
  ]

  include_dirs = [
    "${CALL_MANAGER_PATH}/frameworks/native/include",
    "${CALL_MANAGER_PATH}/interfaces/innerkits",
    "${CALL_MANAGER_PATH}/services/audio/include",
    "${CALL_MANAGER_PATH}/services/audio/include/audio_state",
    "${CALL_MANAGER_PATH}/services/bluetooth/include",
    "${CALL_MANAGER_PATH}/services/call_manager_service/include",
    "${CALL_MANAGER_PATH}/services/call_report/include",
    "${CALL_MANAGER_PATH}/services/call_setting/include",
    "${CALL_MANAGER_PATH}/services/call/call_state_observer/include",
    "${CALL_MANAGER_PATH}/services/call/include",
    "${CALL_MANAGER_PATH}/services/distributed_call/include",
    "${CALL_MANAGER_PATH}/services/distributed_call/include/dcall",
    "${CALL_MANAGER_PATH}/services/telephony_interaction/include",
    "${CALL_MANAGER_PATH}/services/video/include",
    "${CALL_MANAGER_PATH}/services/call_earthquake_alarm/include",
    "${CALL_MANAGER_PATH}/test/unittest/call_manager_gtest/include",
    "${CALL_MANAGER_PATH}/utils/include",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/libphonenumber/cpp/src/phonenumbers",
    "//third_party/protobuf/src",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "audio_framework:audio_client",
    "audio_framework:audio_toneplayer",
    "bluetooth:btframework",
    "c_utils:utils",
    "cellular_data:tel_cellular_data_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "location:lbsservice_common",
    "location:locator_sdk",
    "player_framework:system_sound_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [ "${CALL_MANAGER_PATH}/frameworks/native:tel_call_manager_api" ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerGtest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}
