# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/call_manager/call_manager_aafwk.gni")
import("//build/test.gni")

ohos_unittest("tel_call_manager_gtest") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "tel_call_manager_gtest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "//base/telephony/call_manager/frameworks/native/src/call_manager_service_proxy.cpp",
    "src/call_manager_gtest.cpp",
    "src/zero_branch_test.cpp",
  ]

  include_dirs = [
    "//base/telephony/call_manager/services/bluetooth/include",
    "//base/telephony/call_manager/services/call_manager_service/include",
    "//base/telephony/call_manager/test/unittest/call_manager_gtest/include",
    "//base/telephony/call_manager/utils/include",
    "//base/telephony/call_manager/services/call_report/include",
    "//base/telephony/call_manager/services/call/include",
    "//base/telephony/call_manager/services/call_setting/include",
    "//base/telephony/call_manager/services/telephony_interaction/include",
    "//base/telephony/call_manager/services/call/call_state_observer/include",
    "//base/telephony/call_manager/services/video/include",
    "//base/telephony/call_manager/frameworks/native/include",
    "//base/telephony/call_manager/interfaces/innerkits",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/libphonenumber/cpp/src/phonenumbers",
    "//third_party/protobuf/src",
    "//third_party/protobuf/src/google/protobuf",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "${ability_runtime_inner_api_path}/ability_manager:ability_manager",
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/telephony/call_manager:tel_call_manager",
    "//base/telephony/call_manager/frameworks/native:tel_call_manager_api",
    "//base/telephony/core_service/utils:libtel_common",
    "//third_party/googletest:gtest_main",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerGtest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  if (device_name == "rk3568") {
    defines += [ "CALL_MANAGER_IMS_LITE_UNSUPPORT" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.communication_bluetooth) &&
      global_parts_info.communication_bluetooth) {
    external_deps += [ "bluetooth:btframework" ]
    defines += [ "ABILITY_BLUETOOTH_SUPPORT" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}
