# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
CALL_MANAGER_PATH = "../../.."

ohos_unittest("tel_call_manager_gtest") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "tel_call_manager_gtest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CALL_MANAGER_PATH}/frameworks/native/src/call_manager_service_proxy.cpp",
    "src/call_manager_gtest.cpp",
    "src/zero_branch_test.cpp",
  ]

  include_dirs = [
    "${CALL_MANAGER_PATH}/frameworks/native/include",
    "${CALL_MANAGER_PATH}/interfaces/innerkits",
    "${CALL_MANAGER_PATH}/services/bluetooth/include",
    "${CALL_MANAGER_PATH}/services/call_manager_service/include",
    "${CALL_MANAGER_PATH}/services/call_report/include",
    "${CALL_MANAGER_PATH}/services/call_setting/include",
    "${CALL_MANAGER_PATH}/services/call/call_state_observer/include",
    "${CALL_MANAGER_PATH}/services/call/include",
    "${CALL_MANAGER_PATH}/services/telephony_interaction/include",
    "${CALL_MANAGER_PATH}/services/video/include",
    "${CALL_MANAGER_PATH}/test/unittest/call_manager_gtest/include",
    "${CALL_MANAGER_PATH}/utils/include",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/libphonenumber/cpp/src/phonenumbers",
    "//third_party/protobuf/src",
    "//third_party/protobuf/src/google/protobuf",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bluetooth:btframework",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [
    "${CALL_MANAGER_PATH}:tel_call_manager",
    "${CALL_MANAGER_PATH}/frameworks/native:tel_call_manager_api",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerGtest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  if (device_name == "rk3568") {
    defines += [ "CALL_MANAGER_IMS_LITE_UNSUPPORT" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}
