# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../callmanager.gni")
CALL_MANAGER_PATH = "../../.."

ohos_unittest("tel_call_manager_service_stub_gtest") {
  install_enable = true
  subsystem_name = "telephony"
  part_name = "call_manager"
  test_module = "tel_call_manager_service_stub_gtest"
  module_out_path = part_name + "/" + part_name + "/" + test_module
  sanitize = {
    cfi = false
    cfi_cross_dso = false
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "src/call_manager_service_stub_test.cpp",
  ]
  sources += call_manager_sources

  include_dirs = [
    "${CALL_MANAGER_PATH}/interfaces/innerkits",
    "${CALL_MANAGER_PATH}/services/call_manager_service/include",
    "${CALL_MANAGER_PATH}/services/call_report/include",
    "${CALL_MANAGER_PATH}/frameworks/native/include",
    "${CALL_MANAGER_PATH}/utils/include",
  ]
  include_dirs += call_manager_include_dirs

  external_deps = [
    "access_token:libnativetoken_shared",
    "access_token:libtoken_setproc",
    "core_service:ffrt_mocked",
    "cJSON:cjson",
    "googletest:gmock_main",
    "libphonenumber:phonenumber_standard",
  ]
  external_deps += call_manager_external_deps
  external_deps -= ["ffrt:libffrt"]

  deps = [
    "${CALL_MANAGER_PATH}/test/unittest:call_manager_test_base",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerStubTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  defines += call_manager_defines
}